--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ ExportedObj/
 sysinfo.txt
 
 Builds/**
-Presentations/**
+Presentations/Presentation_12.10.2016/**
 Media/**
 _SoulLust_UnityProject/*.csproj
 
