--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ ExportedObj/
 sysinfo.txt
 
 Builds/**
-Presentations/Presentation_12.10.2016/**
+#Presentations/Presentation_12.10.2016/**
 Media/**
 _SoulLust_UnityProject/*.csproj
 
@@ -37,3 +37,4 @@ _SoulLust_UnityProject/Library/**
 _SoulLust_UnityProject/.vscode
 _SoulLust_UnityProject/*.sln
 _SoulLust_UnityProject/*.htm
+Presentations/**
